--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
 [submodule "heavylib"]
-	path = heavylib
+	path = dep/heavylib
 	url = git@github.com:Wasted-Audio/heavylib.git
 [submodule "DPF"]
-	path = dpf
+	path = dep/dpf
 	url = git@github.com:DISTRHO/DPF.git
 [submodule "DPF-Widgets"]
-	path = dpf-widgets
+	path = dep/dpf-widgets
 	url = git@github.com:Wasted-Audio/DPF-Widgets.git
+[submodule "dep/wstd.clrs"]
+	path = dep/wstd.clrs
+	url = git@github.com:Wasted-Audio/wstd.clrs.git
